b: fixed text-align bug

--- a/webserver/static/styles/todo_app.css
+++ b/webserver/static/styles/todo_app.css
@@ -1,4 +1,4 @@
-.todo {
+.todo_app {
     padding-left: 1rem;
     padding-right: 1rem;
     display: flex;
